--- a/Projeto_11_Analise_Times.ipynb
+++ b/Projeto_11_Analise_Times.ipynb
@@ -16,7 +16,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### importando a biblioteca pandas\n"
+    "### importando a biblioteca pandas\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -37,8 +38,9 @@
    "outputs": [],
    "source": [
     "### carregando o arquivo CSV em um DataFrame\n",
-    "\n",
-    "### mostrando as informações gerais do DataFrame\n"
+    "df = pd.read_csv('Tabela_Clubes.csv')\n",
+    "### mostrando as informações gerais do DataFrame\n",
+    "print(df.info())"
    ]
   },
   {
@@ -56,7 +58,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### mostrando as primeiras linhas do DataFrame\n"
+    "### mostrando as primeiras linhas do DataFrame\n",
+    "print(df.head())"
    ]
   },
   {
@@ -96,7 +99,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### vamos ver quais os times aparecem na tabela e quantas vezes cada um aparece\n"
+    "### vamos ver quais os times aparecem na tabela e quantas vezes cada um aparece\n",
+    "    "
    ]
   },
   {
@@ -288,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "266cb1f8",
    "metadata": {},
    "outputs": [
@@ -345,7 +349,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
